@@ -28,7 +28,6 @@ To Do:
 - add: there is no way to use buy/sell prices in stop formulas in the tester. 
 - median lines chart objects
 - fibo time chart objects
-- add: a data window function for charts/groups that table indicator values.
 
 
 
