@@ -49,6 +49,8 @@ HEADERS += CC.h
 HEADERS += Spread.h
 HEADERS += Index.h
 HEADERS += Traverse.h
+HEADERS += DataWindow.h
+HEADERS += IndicatorSummary.h
 
    
 SOURCES += QuotePlugin.cpp
@@ -95,6 +97,8 @@ SOURCES += CC.cpp
 SOURCES += Spread.cpp
 SOURCES += Index.cpp
 SOURCES += Traverse.cpp
+SOURCES += DataWindow.cpp
+SOURCES += IndicatorSummary.cpp
 
     
 TARGET = qtstalker
