@@ -7,7 +7,6 @@ QMAKE_CXXFLAGS += -rdynamic -ffast-math
 
 HEADERS += Qtstalker.h
 HEADERS += PortfolioDialog.h
-HEADERS += DataWindow.h
 HEADERS += Tester.h
 HEADERS += ChartPage.h
 HEADERS += GroupPage.h
@@ -28,7 +27,6 @@ HEADERS += TesterChartPage.h
 
 SOURCES += Qtstalker.cpp
 SOURCES += PortfolioDialog.cpp
-SOURCES += DataWindow.cpp
 SOURCES += Tester.cpp
 SOURCES += ChartPage.cpp
 SOURCES += GroupPage.cpp
